--- a/inc/style.css
+++ b/inc/style.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -145,7 +145,7 @@ body #content > a#col1 {
 }
 body #content > a#col1.active { box-shadow: 0 0 10px #43A4FF; }
 
-body #content > a#col2 { 
+body #content > a#col2 {
 	background: #2AFA33;
 	background-image: linear-gradient(top, #2AF834 0%, #15A31B 100%);
 	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #2AF834), color-stop(1, #15A31B));
@@ -161,7 +161,7 @@ body #content > a#col3 {
 }
 body #content > a#col3.active { box-shadow: 0 0 10px #FFFF11; }
 
-body #content > a#col4 { 
+body #content > a#col4 {
 	background: #FFB21A;
 	background-image: linear-gradient(top, #FFA718 0%, #FF600D 100%);
 	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFA718), color-stop(1, #FF600D));
@@ -364,4 +364,9 @@ p.subnote a {
 
 #reset.button {
 	font-size: inherit;
+}
+
+gifFrame {
+	width: 500;
+	height: 500;
 }
